# html-to-md

./: Makefile  README.md  pyproject.toml
docs/example/html/: test.html
docs/example/markdown/: test.md
src/html_to_md/: __init__.py  html_to_markdown.py
src/html_to_md/utils/: __init__.py  concat_files.py
