[project]
name = "html-to-md"
version = "0.1.0"
description = "HTMLファイルをMarkdown形式に変換するツール。Ryeを使用して依存関係を管理し、Makefileで簡単に操作可能。"
authors = [
    { name = "KITA-DS12", email = "ca02268@cartahd.com" }
]
dependencies = [
    "markitdown>=0.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/html_to_md"]
